Search with type and term works, search all does not.

--- a/src/main/resources/templates/search.html
+++ b/src/main/resources/templates/search.html
@@ -36,6 +36,9 @@
 
     <hr />
 
+    <span th:each="result : ${results}">
+    <p th:text="${result}"></p>
+    </span>
     <!-- TODO #2 - Loop over jobs map to display all job fields -->
 
 </div>
