--- a/src/main/resources/templates/search.html
+++ b/src/main/resources/templates/search.html
@@ -36,10 +36,20 @@
 
     <hr />
 
+    <!--Nested loop to display each job set in a table.
+    Results display the count as long as it isn't null.
+    Fragment also used in list displays-->
+    <div th:fragment="listing-loop">
+        <h1 th:text="${count != null}? ${count} + 'Result(s)' : ''"></h1>
     <span th:each="result : ${results}">
-    <p th:text="${result}"></p>
+        <table>
+        <tr class="job-listing" th:each="item : ${result}" >
+            <th th:text="${item.key} + ':'"></th><td th:text="${item.value}"></td>
+        </tr>
+        </table>
+        <br />
     </span>
-    <!-- TODO #2 - Loop over jobs map to display all job fields -->
+    </div>
 
 </div>
 
